--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -31,7 +31,7 @@
               </a>
             </li>
             <li x-cloak x-show="signedIn">
-              <a href="{{ url_for('staff_and_clients.workers') }}" 
+              <a href="{{ url_for('staff_and_clients.clients') }}" 
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
               md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
