workers and customers fetched

--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -66,26 +66,26 @@
 
             <button type="button" x-cloak x-show="signedIn" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-400" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
               <span class="sr-only">Open user menu</span>
-              <img class="w-10 h-10 rounded-full" src="https://i.ibb.co/f93t1mB/user.png" alt="person image"/>
+              <img class="w-14 h-14 rounded-full" src="https://i.ibb.co/f93t1mB/user.png" alt="person image"/>
             </button>
             <!-- Dropdown menu -->
-            <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
+            <div class="z-50 hidden my-4 text-lg list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
               <div class="px-4 py-3">
-                <span x-text="userFullName" class="block text-sm text-gray-900 dark:text-white"></span>
-                <span x-text="'Role: '+ userRole " class="block text-sm  text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
+                <span x-text="userFullName" class="block text-lg text-gray-900 dark:text-white"></span>
+                <span x-text="'Role: '+ userRole " class="block text-lg  text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
               </div>
               <ul class="py-2" aria-labelledby="user-menu-button">
                 <li>
-                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
-                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
                 </li>
                 <li>
-                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
                 </li>
                 <li>
-                  <a href="javascript:void(0);" @click="logOut()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log out</a>
+                  <a href="javascript:void(0);" @click="logOut()" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log out</a>
                 </li>
               </ul>
             </div>
