--- a/app/templates/components/_editing_worker_card.html
+++ b/app/templates/components/_editing_worker_card.html
@@ -1,5 +1,5 @@
 
-{% for worker in workers %}
+{% for person in people %}
 <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
     <div class="flex justify-end px-4 pt-4">
         <button id="dropdownButton{{ loop.index }}" data-dropdown-toggle="dropdown{{ loop.index }}" class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5" type="button">
@@ -24,14 +24,14 @@
     </div>
     <div class="flex flex-col items-center p-10">
         <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="worker image"/>
-        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ worker.name }}</h5>
-        <ul class="mt-3 w-full divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
-        {% for key, value in worker.items() %}
-            {% if key != 'name' %}
-            <li class="flex items-center py-3 text-sm">
-                <span>{{ key.replace('_', ' ') | capitalize }}</span>
-                <span class="ml-auto">{{ value }}</span>
-            </li>
+        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ person.Name }} {{person.Patronymic}} {{person.Surname}}</h5>
+        {% for key, value in person.items() %}
+            {% if key != 'Name' and key!= 'Surname' and key!='Patronymic' %}
+            <div class="flex items-center w-full my-0.5 text-base text-gray-500 dark:text-gray-400">
+                <span class="font-bold dark:text-gray-300">{{ key.replace('_', ' ') | capitalize }}:</span>
+                <span class="mx-2 flex-1 dotted-line"></span> 
+                <span> {{ value }}</span>
+            </div>
             {% endif %}
         {% endfor %}
         </ul>
