--- a/app/templates/components/_worker_card.html
+++ b/app/templates/components/_worker_card.html
@@ -24,9 +24,9 @@
     </div>
     <div class="flex flex-col items-center px-10 pb-10">
         <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="person image"/>
-        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ person.name }}</h5>
+        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ person.Name }} {{person.Patronymic}} {{person.Surname}}</h5>
         {% for key, value in person.items() %}
-            {% if key != 'name' %}
+            {% if key != 'Name' and key!= 'Surname' and key!='Patronymic' %}
             <div class="flex items-center w-full my-0.5 text-base text-gray-500 dark:text-gray-400">
                 <span class="font-bold dark:text-gray-300">{{ key.replace('_', ' ') | capitalize }}:</span>
                 <span class="mx-2 flex-1 dotted-line"></span> 
