--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -49,9 +49,11 @@
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/cardsInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/homePage.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/userStore.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/workersState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
 
