--- a/app/templates/components/_search_input_with_filter.html
+++ b/app/templates/components/_search_input_with_filter.html
@@ -9,9 +9,9 @@
             </button>
             <div x-show="showDropdown" @click.away="showDropdown = false" class="z-10 absolute mt-1 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
-                    <template x-for="option in options" :key="option">
+                    <template x-for="option in options" :key="Object.keys(option)[0]">
                         <li>
-                            <button type="button" @click="selectOption(option)" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" x-text="option"></button>
+                            <button type="button" @click="selectOption(option)" class="inline-flex w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" x-text="Object.keys(option)[0]"></button>
                         </li>
                     </template>
                 </ul>
