fully working interactions with customer

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,6 +48,7 @@
     <script type="module" src="{{ url_for('static', filename='js/loginHandler.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/createCard.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/cardsInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/homePage.js') }}"></script>
