--- a/app/templates/components/_workers_topbar.html
+++ b/app/templates/components/_workers_topbar.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="w-1/4 flex flex-col justify-center items-center">
-                <button class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300
+                <button @click="createNewCard()" class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300
                 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-4 dark:bg-cyan-800 dark:hover:bg-cyan-900 focus:outline-none
                 dark:focus:ring-cyan-950">
                     Add worker
