--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -39,6 +39,8 @@
         {% block scripts %}
         
         {% endblock %}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="{{ url_for('static', filename='js/toastNotifications.js') }}" defer></script>
@@ -57,8 +59,8 @@
     <script type="module" src="{{ url_for('static', filename='js/workersState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
-
-
+    
+    
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
 
 </body>
