--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -57,6 +57,7 @@
     <script type="module" src="{{ url_for('static', filename='js/userStore.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/workersState.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/sortingDropdown.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
     
