form UI completed

--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -82,7 +82,7 @@
                   <a href="javascript:void(0);" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
                 </li>
                 <li>
-                  <a href="javascript:void(0);" data-modal-target="static-modal" data-modal-toggle="static-modal" type="button" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit password</a>
+                  <a href="javascript:void(0);" data-modal-target="change-password-modal" data-modal-toggle="change-password-modal" type="button" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit password</a>
                 </li>
                 <li>
                   <a href="javascript:void(0);" @click="logOut()" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log out</a>
