--- a/app/templates/components/_change_password_modal.html
+++ b/app/templates/components/_change_password_modal.html
@@ -1,4 +1,4 @@
-<div id="change-password-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div x-data="changePassword({{session['user']}})" id="change-password-modal" data-modal-backdrop="static" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-xl max-h-full">
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
@@ -15,14 +15,14 @@
             <div class="p-4 md:p-5">
                 <form class="space-y-4">
                     <div>
-                        <label for="password" class="block mb-2 text-base font-medium text-gray-900 dark:text-white">Password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
+                        <label for="newPassword" class="block mb-2 text-base font-medium text-gray-900 dark:text-white">Password</label>
+                        <input type="password" name="newPassword" id="newPassword" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
                     </div>
                     <div>
-                        <label for="password" class="block mb-2 text-base font-medium text-gray-900 dark:text-white">Confirm Password</label>
-                        <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
+                        <label for="confirmPassword" class="block mb-2 text-base font-medium text-gray-900 dark:text-white">Confirm Password</label>
+                        <input type="password" name="confirmPassword" id="confirmPassword" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
                     </div>
-                    <button class="w-full text-white bg-cyan-600 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300
+                    <button @click.prevent="submitChangePassword()" class="w-full text-white bg-cyan-600 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300
                     font-medium rounded-lg text-base px-5 py-2.5 me-2 dark:bg-cyan-800 dark:hover:bg-cyan-900 focus:outline-none
                     dark:focus:ring-cyan-950">Change Password</button>
                 </form>
