--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -61,6 +61,8 @@
     <script type="module" src="{{ url_for('static', filename='js/sortingDropdown.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/changePassword.js') }}"></script>
+
     
     
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
