--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -79,7 +79,7 @@
                                         
                 
                 <!-- Actions -->
-                <td x-show="$store.tableState.globalState != GlobalStates.SELECTING && user.Role === 'Manager'" class="px-6 py-4 text-right max-w-28">
+                <td x-show="$store.tableState.globalState != GlobalStates.SELECTING && user.Role === 'Manager'" class="px-6 py-4 text-right max-w-28 print:hidden">
                     <template x-if="!row.editing">
                         <button @click="$store.tableState.editRow(row.{{key_column}}, true)" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
                             Edit
