--- a/app/templates/pages/staff_and_clients.html
+++ b/app/templates/pages/staff_and_clients.html
@@ -10,7 +10,7 @@
         <div class="relative left-1/6 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-purple-400 via-[#2bb3d3] to-[#0aaa9d] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem] bg-[length:300%_auto] animate-blobs" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
         </div>
 
-        <div x-data="cardsInteractions('{{active_tab}}', {{people}}, {{columns_json}}, '{{key_column}}')" id="card-grid" class="w-4/5 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-center">
+        <div x-data="cardsInteractions('{{active_tab}}', {{people}}, {{columns_json}}, '{{key_column}}')" id="card-grid" class="w-4/5 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-center print:w-full print:portrait:!grid-cols-3">
             <div class="col-span-full" id="card-header">
                 {% include 'components/_workers_topbar.html' %}
             </div>
