--- a/app/templates/components/_workers_topbar.html
+++ b/app/templates/components/_workers_topbar.html
@@ -32,6 +32,7 @@
                 <div class="flex py-5 bg-white dark:bg-gray-800 justify-center gap-5">
                     {% include 'components/_sorting_dropdown.html' %}
                     {% include 'components/_search_input_with_filter.html' %}
+                    {% include 'components/_print_button.html' %}
                 </div>
             </div>
             <div class="w-1/4 flex flex-col justify-center items-center">
