--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -52,22 +52,23 @@
             </p>
         </template>
 
-        <div class="py-5 bg-white dark:bg-gray-800" :class="{ 'flex justify-center': user.Role !== 'Manager' }">
+        <div class="flex flex-row py-5 bg-white dark:bg-gray-800 gap-5" :class="{ 'justify-center': user.Role !== 'Manager' }">
             {% if (active_tab == 'categories')%}
                 {% include 'components/_default_search_input.html' %}
             {% else %}
                 {% include 'components/_search_input_with_filter.html' %}
             {% endif %}
+            {% include 'components/_print_button.html' %}
         </div>
     </div>
-    <div x-show="tableState != GlobalStates.SELECTING && user.Role === 'Manager'" class="w-1/4 flex flex-col justify-center items-center">
+    <div x-show="tableState != GlobalStates.SELECTING && user.Role === 'Manager'" class="w-1/4 flex flex-col gap-y-5 justify-center items-center">
             <button
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
                 @click="createRowForm()"
                 :disabled="tableState != GlobalStates.NONE"
                 class="text-white w-3/4 h-1/3 min-h-16 bg-cyan-600 hover:bg-sky-600 
                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm 
-                px-5 py-2.5 me-2 mb-4 dark:bg-cyan-800 dark:hover:bg-cyan-900 
+                px-5 py-2.5 me-2 dark:bg-cyan-800 dark:hover:bg-cyan-900 
                 focus:outline-none dark:focus:ring-cyan-950 disabled:opacity-50 disabled:cursor-not-allowed"
             >
                 <span x-text="activeTab === 'categories' ? 'Add category' : 'Add product'"></span>
@@ -77,7 +78,7 @@
                 :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
                 @click="$store.tableState.startSelecting()"
                 :disabled="tableState != GlobalStates.NONE"
-                class=" w-3/4 h-1/3 min-h-16 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
+                class=" w-3/4 h-1/3 min-h-16 py-2.5 px-5 me-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
                 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed"
@@ -90,7 +91,7 @@
         <div x-cloak x-show="tableState === GlobalStates.SELECTING" class="w-1/4 flex flex-col justify-center items-center">
               <button 
                 @click="$store.tableState.deleteSelected()"
-                class="w-3/4 h-1/3 py-2.5 px-5 me-2 mb-4 inline-flex items-center justify-center
+                class="w-3/4 h-1/3 py-2.5 px-5 me-2 inline-flex items-center justify-center
                 bg-red-600 hover:bg-red-700 text-white text-sm font-medium
                 focus:outline-none rounded-lg border
                 border-red-400 focus:z-10 focus:ring-4 focus:ring-red-200
@@ -106,7 +107,7 @@
 
             <button 
                 @click="$store.tableState.stopSelecting()"
-                class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 inline-flex items-center justify-center text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
+                class=" w-3/4 h-1/3 py-2.5 px-5 me-2 inline-flex items-center justify-center text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
                 dark:hover:bg-gray-700"
